output/LinqParser.java
// $ANTLR 3.5 /home/richard/LINQ_Antlr/Linq.g 2013-11-07 19:06:02

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class LinqParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "EXPONENT", "FLOAT", "ID", "INT", 
		"MA", "TD", "'&&'", "'('", "')'", "'++'", "'--'", "': '", "';'", "'<'", 
		"'<='", "'<>'", "'='", "'=='", "'>'", "'>='", "'Do'", "'Else'", "'For'", 
		"'If'", "'Switch'", "'While'", "'break'", "'case'", "'default'", "'ok'", 
		"'return'", "'void'", "'{'", "'||'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int EXPONENT=4;
	public static final int FLOAT=5;
	public static final int ID=6;
	public static final int INT=7;
	public static final int MA=8;
	public static final int TD=9;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public LinqParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public LinqParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return LinqParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/richard/LINQ_Antlr/Linq.g"; }



	// $ANTLR start "program"
	// /home/richard/LINQ_Antlr/Linq.g:3:1: program : ( initial )+ ;
	public final void program() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:3:8: ( ( initial )+ )
			// /home/richard/LINQ_Antlr/Linq.g:3:10: ( initial )+
			{
			// /home/richard/LINQ_Antlr/Linq.g:3:10: ( initial )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==MA||LA1_0==24||(LA1_0 >= 26 && LA1_0 <= 29)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /home/richard/LINQ_Antlr/Linq.g:3:10: initial
					{
					pushFollow(FOLLOW_initial_in_program9);
					initial();
					state._fsp--;

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "program"



	// $ANTLR start "initial"
	// /home/richard/LINQ_Antlr/Linq.g:5:1: initial : initialex ;
	public final void initial() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:5:8: ( initialex )
			// /home/richard/LINQ_Antlr/Linq.g:5:10: initialex
			{
			pushFollow(FOLLOW_initialex_in_initial17);
			initialex();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "initial"



	// $ANTLR start "initialex"
	// /home/richard/LINQ_Antlr/Linq.g:7:1: initialex : ( ifex | forex | switchex | whilex | dowhilex | funciones );
	public final void initialex() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:7:10: ( ifex | forex | switchex | whilex | dowhilex | funciones )
			int alt2=6;
			switch ( input.LA(1) ) {
			case 27:
				{
				alt2=1;
				}
				break;
			case 26:
				{
				alt2=2;
				}
				break;
			case 28:
				{
				alt2=3;
				}
				break;
			case 29:
				{
				alt2=4;
				}
				break;
			case 24:
				{
				alt2=5;
				}
				break;
			case MA:
				{
				alt2=6;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// /home/richard/LINQ_Antlr/Linq.g:7:12: ifex
					{
					pushFollow(FOLLOW_ifex_in_initialex24);
					ifex();
					state._fsp--;

					}
					break;
				case 2 :
					// /home/richard/LINQ_Antlr/Linq.g:7:19: forex
					{
					pushFollow(FOLLOW_forex_in_initialex28);
					forex();
					state._fsp--;

					}
					break;
				case 3 :
					// /home/richard/LINQ_Antlr/Linq.g:7:27: switchex
					{
					pushFollow(FOLLOW_switchex_in_initialex32);
					switchex();
					state._fsp--;

					}
					break;
				case 4 :
					// /home/richard/LINQ_Antlr/Linq.g:7:38: whilex
					{
					pushFollow(FOLLOW_whilex_in_initialex36);
					whilex();
					state._fsp--;

					}
					break;
				case 5 :
					// /home/richard/LINQ_Antlr/Linq.g:7:47: dowhilex
					{
					pushFollow(FOLLOW_dowhilex_in_initialex40);
					dowhilex();
					state._fsp--;

					}
					break;
				case 6 :
					// /home/richard/LINQ_Antlr/Linq.g:7:58: funciones
					{
					pushFollow(FOLLOW_funciones_in_initialex44);
					funciones();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "initialex"



	// $ANTLR start "ifex"
	// /home/richard/LINQ_Antlr/Linq.g:11:1: ifex : 'If' '(' condicion ')' inbloque accion finbloque else ;
	public final void ifex() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:11:5: ( 'If' '(' condicion ')' inbloque accion finbloque else )
			// /home/richard/LINQ_Antlr/Linq.g:11:7: 'If' '(' condicion ')' inbloque accion finbloque else
			{
			match(input,27,FOLLOW_27_in_ifex53); 
			match(input,11,FOLLOW_11_in_ifex55); 
			pushFollow(FOLLOW_condicion_in_ifex58);
			condicion();
			state._fsp--;

			match(input,12,FOLLOW_12_in_ifex60); 
			pushFollow(FOLLOW_inbloque_in_ifex62);
			inbloque();
			state._fsp--;

			pushFollow(FOLLOW_accion_in_ifex65);
			accion();
			state._fsp--;

			pushFollow(FOLLOW_finbloque_in_ifex67);
			finbloque();
			state._fsp--;

			pushFollow(FOLLOW_else_in_ifex69);
			else();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "ifex"



	// $ANTLR start "else"
	// /home/richard/LINQ_Antlr/Linq.g:12:1: else : (| 'Else' inbloque accion finbloque else );
	public final void else() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:12:6: (| 'Else' inbloque accion finbloque else )
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==EOF||LA3_0==MA||LA3_0==24||(LA3_0 >= 26 && LA3_0 <= 29)) ) {
				alt3=1;
			}
			else if ( (LA3_0==25) ) {
				alt3=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// /home/richard/LINQ_Antlr/Linq.g:13:2: 
					{
					}
					break;
				case 2 :
					// /home/richard/LINQ_Antlr/Linq.g:13:3: 'Else' inbloque accion finbloque else
					{
					match(input,25,FOLLOW_25_in_else79); 
					pushFollow(FOLLOW_inbloque_in_else80);
					inbloque();
					state._fsp--;

					pushFollow(FOLLOW_accion_in_else83);
					accion();
					state._fsp--;

					pushFollow(FOLLOW_finbloque_in_else85);
					finbloque();
					state._fsp--;

					pushFollow(FOLLOW_else_in_else87);
					else();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "else"



	// $ANTLR start "final"
	// /home/richard/LINQ_Antlr/Linq.g:16:1: final : ';' ;
	public final void final() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:16:7: ( ';' )
			// /home/richard/LINQ_Antlr/Linq.g:16:10: ';'
			{
			match(input,16,FOLLOW_16_in_final97); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "final"



	// $ANTLR start "inbloque"
	// /home/richard/LINQ_Antlr/Linq.g:18:1: inbloque : '{' ;
	public final void inbloque() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:18:9: ( '{' )
			// /home/richard/LINQ_Antlr/Linq.g:18:11: '{'
			{
			match(input,36,FOLLOW_36_in_inbloque105); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "inbloque"



	// $ANTLR start "finbloque"
	// /home/richard/LINQ_Antlr/Linq.g:20:1: finbloque : '}' ;
	public final void finbloque() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:21:2: ( '}' )
			// /home/richard/LINQ_Antlr/Linq.g:21:4: '}'
			{
			match(input,38,FOLLOW_38_in_finbloque114); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "finbloque"



	// $ANTLR start "forex"
	// /home/richard/LINQ_Antlr/Linq.g:23:1: forex : 'For' '(' iniciofor final limitador final mov ')' inbloque accion finbloque ;
	public final void forex() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:23:6: ( 'For' '(' iniciofor final limitador final mov ')' inbloque accion finbloque )
			// /home/richard/LINQ_Antlr/Linq.g:23:8: 'For' '(' iniciofor final limitador final mov ')' inbloque accion finbloque
			{
			match(input,26,FOLLOW_26_in_forex121); 
			match(input,11,FOLLOW_11_in_forex123); 
			pushFollow(FOLLOW_iniciofor_in_forex125);
			iniciofor();
			state._fsp--;

			pushFollow(FOLLOW_final_in_forex131);
			final();
			state._fsp--;

			pushFollow(FOLLOW_limitador_in_forex133);
			limitador();
			state._fsp--;

			pushFollow(FOLLOW_final_in_forex137);
			final();
			state._fsp--;

			pushFollow(FOLLOW_mov_in_forex139);
			mov();
			state._fsp--;

			match(input,12,FOLLOW_12_in_forex143); 
			pushFollow(FOLLOW_inbloque_in_forex145);
			inbloque();
			state._fsp--;

			pushFollow(FOLLOW_accion_in_forex147);
			accion();
			state._fsp--;

			pushFollow(FOLLOW_finbloque_in_forex150);
			finbloque();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "forex"



	// $ANTLR start "whilex"
	// /home/richard/LINQ_Antlr/Linq.g:25:1: whilex : 'While' '(' condicion ')' inbloque accion finbloque ;
	public final void whilex() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:25:7: ( 'While' '(' condicion ')' inbloque accion finbloque )
			// /home/richard/LINQ_Antlr/Linq.g:25:9: 'While' '(' condicion ')' inbloque accion finbloque
			{
			match(input,29,FOLLOW_29_in_whilex157); 
			match(input,11,FOLLOW_11_in_whilex159); 
			pushFollow(FOLLOW_condicion_in_whilex161);
			condicion();
			state._fsp--;

			match(input,12,FOLLOW_12_in_whilex162); 
			pushFollow(FOLLOW_inbloque_in_whilex164);
			inbloque();
			state._fsp--;

			pushFollow(FOLLOW_accion_in_whilex166);
			accion();
			state._fsp--;

			pushFollow(FOLLOW_finbloque_in_whilex169);
			finbloque();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "whilex"



	// $ANTLR start "dowhilex"
	// /home/richard/LINQ_Antlr/Linq.g:27:1: dowhilex : 'Do' inbloque accion finbloque 'While' '(' condicion ')' ;
	public final void dowhilex() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:27:9: ( 'Do' inbloque accion finbloque 'While' '(' condicion ')' )
			// /home/richard/LINQ_Antlr/Linq.g:27:11: 'Do' inbloque accion finbloque 'While' '(' condicion ')'
			{
			match(input,24,FOLLOW_24_in_dowhilex176); 
			pushFollow(FOLLOW_inbloque_in_dowhilex178);
			inbloque();
			state._fsp--;

			pushFollow(FOLLOW_accion_in_dowhilex180);
			accion();
			state._fsp--;

			pushFollow(FOLLOW_finbloque_in_dowhilex182);
			finbloque();
			state._fsp--;

			match(input,29,FOLLOW_29_in_dowhilex184); 
			match(input,11,FOLLOW_11_in_dowhilex186); 
			pushFollow(FOLLOW_condicion_in_dowhilex188);
			condicion();
			state._fsp--;

			match(input,12,FOLLOW_12_in_dowhilex189); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "dowhilex"



	// $ANTLR start "switchex"
	// /home/richard/LINQ_Antlr/Linq.g:29:1: switchex : 'Switch' '(' var ')' inbloque caseswitch finbloque ;
	public final void switchex() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:29:9: ( 'Switch' '(' var ')' inbloque caseswitch finbloque )
			// /home/richard/LINQ_Antlr/Linq.g:29:13: 'Switch' '(' var ')' inbloque caseswitch finbloque
			{
			match(input,28,FOLLOW_28_in_switchex198); 
			match(input,11,FOLLOW_11_in_switchex200); 
			pushFollow(FOLLOW_var_in_switchex202);
			var();
			state._fsp--;

			match(input,12,FOLLOW_12_in_switchex204); 
			pushFollow(FOLLOW_inbloque_in_switchex206);
			inbloque();
			state._fsp--;

			pushFollow(FOLLOW_caseswitch_in_switchex209);
			caseswitch();
			state._fsp--;

			pushFollow(FOLLOW_finbloque_in_switchex211);
			finbloque();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "switchex"



	// $ANTLR start "caseswitch"
	// /home/richard/LINQ_Antlr/Linq.g:31:1: caseswitch : ( 'case' INT ': ' accion break final fimalswitch | 'case' INT ': ' accion break final caseswitch );
	public final void caseswitch() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:31:12: ( 'case' INT ': ' accion break final fimalswitch | 'case' INT ': ' accion break final caseswitch )
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==31) ) {
				int LA4_1 = input.LA(2);
				if ( (LA4_1==INT) ) {
					int LA4_2 = input.LA(3);
					if ( (LA4_2==15) ) {
						int LA4_3 = input.LA(4);
						if ( (LA4_3==33) ) {
							int LA4_4 = input.LA(5);
							if ( (LA4_4==30) ) {
								int LA4_5 = input.LA(6);
								if ( (LA4_5==16) ) {
									int LA4_6 = input.LA(7);
									if ( (LA4_6==32) ) {
										alt4=1;
									}
									else if ( (LA4_6==31) ) {
										alt4=2;
									}

									else {
										int nvaeMark = input.mark();
										try {
											for (int nvaeConsume = 0; nvaeConsume < 7 - 1; nvaeConsume++) {
												input.consume();
											}
											NoViableAltException nvae =
												new NoViableAltException("", 4, 6, input);
											throw nvae;
										} finally {
											input.rewind(nvaeMark);
										}
									}

								}

								else {
									int nvaeMark = input.mark();
									try {
										for (int nvaeConsume = 0; nvaeConsume < 6 - 1; nvaeConsume++) {
											input.consume();
										}
										NoViableAltException nvae =
											new NoViableAltException("", 4, 5, input);
										throw nvae;
									} finally {
										input.rewind(nvaeMark);
									}
								}

							}

							else {
								int nvaeMark = input.mark();
								try {
									for (int nvaeConsume = 0; nvaeConsume < 5 - 1; nvaeConsume++) {
										input.consume();
									}
									NoViableAltException nvae =
										new NoViableAltException("", 4, 4, input);
									throw nvae;
								} finally {
									input.rewind(nvaeMark);
								}
							}

						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 4, 3, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 4, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 4, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// /home/richard/LINQ_Antlr/Linq.g:31:13: 'case' INT ': ' accion break final fimalswitch
					{
					match(input,31,FOLLOW_31_in_caseswitch219); 
					match(input,INT,FOLLOW_INT_in_caseswitch221); 
					match(input,15,FOLLOW_15_in_caseswitch223); 
					pushFollow(FOLLOW_accion_in_caseswitch224);
					accion();
					state._fsp--;

					pushFollow(FOLLOW_break_in_caseswitch226);
					break();
					state._fsp--;

					pushFollow(FOLLOW_final_in_caseswitch228);
					final();
					state._fsp--;

					pushFollow(FOLLOW_fimalswitch_in_caseswitch230);
					fimalswitch();
					state._fsp--;

					}
					break;
				case 2 :
					// /home/richard/LINQ_Antlr/Linq.g:32:4: 'case' INT ': ' accion break final caseswitch
					{
					match(input,31,FOLLOW_31_in_caseswitch235); 
					match(input,INT,FOLLOW_INT_in_caseswitch237); 
					match(input,15,FOLLOW_15_in_caseswitch239); 
					pushFollow(FOLLOW_accion_in_caseswitch240);
					accion();
					state._fsp--;

					pushFollow(FOLLOW_break_in_caseswitch242);
					break();
					state._fsp--;

					pushFollow(FOLLOW_final_in_caseswitch244);
					final();
					state._fsp--;

					pushFollow(FOLLOW_caseswitch_in_caseswitch246);
					caseswitch();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "caseswitch"



	// $ANTLR start "fimalswitch"
	// /home/richard/LINQ_Antlr/Linq.g:35:1: fimalswitch : 'default' ': ' accion break final ;
	public final void fimalswitch() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:36:2: ( 'default' ': ' accion break final )
			// /home/richard/LINQ_Antlr/Linq.g:36:4: 'default' ': ' accion break final
			{
			match(input,32,FOLLOW_32_in_fimalswitch256); 
			match(input,15,FOLLOW_15_in_fimalswitch258); 
			pushFollow(FOLLOW_accion_in_fimalswitch259);
			accion();
			state._fsp--;

			pushFollow(FOLLOW_break_in_fimalswitch261);
			break();
			state._fsp--;

			pushFollow(FOLLOW_final_in_fimalswitch263);
			final();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "fimalswitch"



	// $ANTLR start "break"
	// /home/richard/LINQ_Antlr/Linq.g:37:1: break : 'break' ;
	public final void break() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:37:7: ( 'break' )
			// /home/richard/LINQ_Antlr/Linq.g:37:9: 'break'
			{
			match(input,30,FOLLOW_30_in_break271); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "break"



	// $ANTLR start "mov"
	// /home/richard/LINQ_Antlr/Linq.g:38:1: mov : var funcion ;
	public final void mov() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:38:5: ( var funcion )
			// /home/richard/LINQ_Antlr/Linq.g:38:7: var funcion
			{
			pushFollow(FOLLOW_var_in_mov278);
			var();
			state._fsp--;

			pushFollow(FOLLOW_funcion_in_mov280);
			funcion();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "mov"



	// $ANTLR start "limitador"
	// /home/richard/LINQ_Antlr/Linq.g:39:1: limitador : ( var comparacion val | var comparacion var );
	public final void limitador() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:40:2: ( var comparacion val | var comparacion var )
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==ID) ) {
				int LA5_1 = input.LA(2);
				if ( ((LA5_1 >= 17 && LA5_1 <= 19)||(LA5_1 >= 21 && LA5_1 <= 23)) ) {
					int LA5_2 = input.LA(3);
					if ( (LA5_2==FLOAT||LA5_2==INT) ) {
						alt5=1;
					}
					else if ( (LA5_2==ID) ) {
						alt5=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 5, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 5, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// /home/richard/LINQ_Antlr/Linq.g:40:4: var comparacion val
					{
					pushFollow(FOLLOW_var_in_limitador289);
					var();
					state._fsp--;

					pushFollow(FOLLOW_comparacion_in_limitador291);
					comparacion();
					state._fsp--;

					pushFollow(FOLLOW_val_in_limitador293);
					val();
					state._fsp--;

					}
					break;
				case 2 :
					// /home/richard/LINQ_Antlr/Linq.g:40:26: var comparacion var
					{
					pushFollow(FOLLOW_var_in_limitador297);
					var();
					state._fsp--;

					pushFollow(FOLLOW_comparacion_in_limitador299);
					comparacion();
					state._fsp--;

					pushFollow(FOLLOW_var_in_limitador301);
					var();
					state._fsp--;

					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "limitador"



	// $ANTLR start "comparacion"
	// /home/richard/LINQ_Antlr/Linq.g:44:1: comparacion : ( '<>' | '<=' | '>=' | '==' | '>' | '<' );
	public final void comparacion() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:44:13: ( '<>' | '<=' | '>=' | '==' | '>' | '<' )
			// /home/richard/LINQ_Antlr/Linq.g:
			{
			if ( (input.LA(1) >= 17 && input.LA(1) <= 19)||(input.LA(1) >= 21 && input.LA(1) <= 23) ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "comparacion"



	// $ANTLR start "accion"
	// /home/richard/LINQ_Antlr/Linq.g:47:1: accion : 'ok' ;
	public final void accion() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:47:8: ( 'ok' )
			// /home/richard/LINQ_Antlr/Linq.g:47:10: 'ok'
			{
			match(input,33,FOLLOW_33_in_accion338); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "accion"



	// $ANTLR start "funcion"
	// /home/richard/LINQ_Antlr/Linq.g:50:1: funcion : ( '++' | '--' );
	public final void funcion() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:50:9: ( '++' | '--' )
			// /home/richard/LINQ_Antlr/Linq.g:
			{
			if ( (input.LA(1) >= 13 && input.LA(1) <= 14) ) {
				input.consume();
				state.errorRecovery=false;
			}
			else {
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "funcion"



	// $ANTLR start "iniciofor"
	// /home/richard/LINQ_Antlr/Linq.g:52:1: iniciofor : var '=' val ;
	public final void iniciofor() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:52:11: ( var '=' val )
			// /home/richard/LINQ_Antlr/Linq.g:52:13: var '=' val
			{
			pushFollow(FOLLOW_var_in_iniciofor361);
			var();
			state._fsp--;

			match(input,20,FOLLOW_20_in_iniciofor363); 
			pushFollow(FOLLOW_val_in_iniciofor364);
			val();
			state._fsp--;

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "iniciofor"



	// $ANTLR start "finalex"
	// /home/richard/LINQ_Antlr/Linq.g:54:1: finalex :;
	public final void finalex() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:54:9: ()
			// /home/richard/LINQ_Antlr/Linq.g:55:2: 
			{
			}

		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "finalex"



	// $ANTLR start "condicion"
	// /home/richard/LINQ_Antlr/Linq.g:56:1: condicion : ( var comparacion val | var comparacion val conjun condicion );
	public final void condicion() throws  {
		try {
			// /home/richard/LINQ_Antlr/Linq.g:56:11: ( var comparacion val | var comparacion val conjun condicion )
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==ID) ) {
				int LA6_1 = input.LA(2);
				if ( ((LA6_1 >= 17 && LA6_1 <= 19)||(LA6_1 >= 21 && LA6_1 <= 23)) ) {
					int LA6_2 = input.LA(3);
					if ( (LA6_2==FLOAT||LA6_2==INT) ) {
						int LA6_3 = input.LA(4);
						if ( (LA6_3==12) ) {
							alt6=1;
						}
						else if ( (LA6_3==10||LA6_3==37) ) {
							alt6=2;
						}

						else {
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 6, 3, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 6, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 6, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}

			switch (alt6) {
				case 1 :
					// /home/richard/LINQ_Antlr/Linq.g:56:13: var comparacion val
					{
					pushFollow(FOLLOW_var_in_condicion381);
					var();
					state._fsp--;

					pushFollow(FOLLOW_comparacion_in_condicion383);
					comparacion();
					state._fsp--;

					pushFollow(FOLLOW_val_in_condicion385);
					val();
					state._fsp--;
